--- a/src/main/resources/assets/ordnance/lang/en_us.json
+++ b/src/main/resources/assets/ordnance/lang/en_us.json
@@ -14,10 +14,11 @@
   "item.ordnance.tiny_wolframite_dust": "Tiny Pile of Wolframite Dust",
 
   "item.ordnance.angel_rods": "Angel Rod",
+  "item.ordnance.hammah": "Hammah!",
 
   "item.ordnance.music_disc_by_dusk": "Music Disc",
 
-  "item.ordnance.music_disc_by_dusk.desc": "Hexcodemagenta - By Dusk",
+  "item.ordnance.music_disc_by_dusk.desc": "Hexcodemagenta - At/By Dusk",
 
   "tooltip.ordnance.wolframiteitem.tooltip": "(Fe,Mn)WO4",
   "tooltip.ordnance.tungstenitem.tooltip": "W",
